Cache generated model, invalidating on deploy/undeploy.